# platform-game

./: .gitignore  CMakeLists.txt  README.md
Assets/Cutscenes/: Cutscenes.json
Assets/Dialogues/: BossFinalInicio.txt  Introducao.txt  PrimeiraMorte.txt  PrimeiroBoss.txt  Prologue.txt  SegundaMorte.txt
Assets/EnemiesWaves/: MusgoArena1.json  Waves1.json  Waves2.json
Assets/InputBindings/: InputBindings.json
Assets/Levels/: Mundo.world
Assets/Levels/0-Prologue/: Prologue.json  Prologue.tmx  Prologue.tsx
Assets/Levels/1-Musgo/: Musgo.json  Musgo.tmx  Musgo.tsx
Assets/Levels/2-Run/: Run.json  Run.tmx  Run.tsx  RunTileSet.json
Assets/Levels/3-Swamp/: Swamp.json  Swamp.tmx  Swamp.tsx  SwampTileSet.json
Assets/Levels/4-Pain/: Pain.json  Pain.tmx  Pain.tsx  PainTileSet.json
Assets/Levels/5-FinalLevel/: Level5.json  Level5.tmx
Assets/Levels/Coliseu/: Coliseu.json  Coliseu.tmx  Coliseu.tsx
Assets/Levels/Forest/: Forest.csv  Forest.json  Forest.tmx  Forest.tsx  ForestTileSet.json
Assets/Levels/Forest1/: Forest1.tmx  Forest1.tsx  Forest1TileSet.json
Assets/Levels/Level1/: Level1.tmx  Level1.tsx
Assets/Levels/Level5/: Level5.json  Level5.tmx  Level5.tsx
Assets/Levels/MirrorBoss/: MirrorBoss.json  MirrorBoss.tmx  MirrorBoss.tsx
Assets/Levels/Musgo/: Musgo.json  Musgo.tmx  Musgo.tsx  MusgoTileSet.json
Assets/Levels/Pain/: Pain.csv  Pain.json  Pain.tmx  Pain.tsx
Assets/Levels/Prologue/: Prologue.json  Prologue.tmx
Assets/Levels/Room0/: Room0.json  Room0.tmx  Room0.tsx
Assets/Levels/Room1/: Room1.json  Room1.tmx  Room1.tsx
Assets/Levels/Room2/: Room2.json  Room2.tmx  Room2.tsx
Assets/Levels/Run/: Run.csv  Run.json  Run.tmx  RunTileSet.json
Assets/Levels/Swamp/: Swamp.json  Swamp.tmx  Swamp.tsx
Assets/Sprites/AcidBlob/: AcidBlob.json
Assets/Sprites/Beetle/: Beetle.json
Assets/Sprites/Brazier/: Brazier.json
Assets/Sprites/BushMonster/: BushMonster.json
Assets/Sprites/BushMonster2/: BushMonster.json
Assets/Sprites/CheckPoint/: CheckPoint.json
Assets/Sprites/Dash/: Dash.json
Assets/Sprites/Dash3/: Dash.json
Assets/Sprites/DragonFly/: DragonFly.json
Assets/Sprites/Esquilo/: Esquilo.json
Assets/Sprites/Esquilo2/: Esquilo.json
Assets/Sprites/Esquilo3/: Esquilo.json
Assets/Sprites/Esquilo4/: Esquilo.json
Assets/Sprites/Esquilo5/: Esquilo.json
Assets/Sprites/Fairy/: Fairy.json
Assets/Sprites/FinalBoss/: FinalBoss.json
Assets/Sprites/FinalBossProjectile2/: Projectile.json
Assets/Sprites/Fireball/: Fireball.json
Assets/Sprites/Fireball2/: Fireball.json
Assets/Sprites/FlyingGolem/: FlyingGolem.json
Assets/Sprites/FlyingGolem2/: FlyingGolem.json
Assets/Sprites/FlyingSpawnerEnemy/: FlyingSpawnerEnemy.json
Assets/Sprites/Frog/: Frog.json
Assets/Sprites/FrogTongue/: FrogTongue.json
Assets/Sprites/Golem/: Golem.json
Assets/Sprites/Golem2/: Golem.json
Assets/Sprites/Goomba/: Goomba.json
Assets/Sprites/HookEnemy/: HookEnemy.json
Assets/Sprites/HookPoint/: HookPoint.json
Assets/Sprites/Jump2/: Jump.json
Assets/Sprites/Lava/: Lava.json
Assets/Sprites/Lever/: Lever.json
Assets/Sprites/Mantis2/: Mantis.json
Assets/Sprites/Mantis3/: Mantis.json
Assets/Sprites/MirrorBoss/: MirrorBoss.json
Assets/Sprites/Musgo/: MusgoTileSet.json
Assets/Sprites/Musgo2/: sprite_sheet.json
Assets/Sprites/Musgo3/: Musgo3TileSet.json
Assets/Sprites/Mushroom/: Mushroom.json
Assets/Sprites/Portal/: Portal.json
Assets/Sprites/Portal2/: Portal.json
Assets/Sprites/Raposa/: Raposa.json
Assets/Sprites/Run2/: Run2TileSet.json
Assets/Sprites/Skill/: Skill.json
Assets/Sprites/Slime/: Slime.json
Assets/Sprites/Snake/: Snake.json
Assets/Sprites/SpawnFly/: SpawnFly.json
Assets/Sprites/StoneGate/: StoneGate.json
Assets/Sprites/Swamp/: SwampTileSet.json
Assets/Sprites/Sword Slash/: SwordSlash.json
Saves/: slot_0.json  slot_1.json  slot_2.json  slot_3.json  slot_4.json
Shaders/: Base.frag  Base.vert  Fade.frag
Source/: AudioSystem.cpp  AudioSystem.h  Camera.cpp  Camera.h  Cutscene.cpp  Cutscene.h  DialogueSystem.cpp  DialogueSystem.h  Game.cpp  Game.h  HUD.cpp  HUD.h  Main.cpp  Map.cpp  Map.h  Math.h  SaveData.cpp  SaveData.h  SaveManager.cpp  SaveManager.h  Store.cpp  Store.h  WaveManager.cpp  WaveManager.h
Source/Actors/: Actor.cpp  Actor.h  Brazier.cpp  Brazier.h  BushMonster.cpp  BushMonster.h  Checkpoint.cpp  Checkpoint.h  CloneEnemy.cpp  CloneEnemy.h  Decorations.cpp  Decorations.h  DragonFly.cpp  DragonFly.h  DynamicGround.cpp  DynamicGround.h  Effect.cpp  Effect.h  Enemy.cpp  Enemy.h  EnemySimple.cpp  EnemySimple.h  Fairy.cpp  Fairy.h  FireBall.cpp  FireBall.h  FlyingEnemySimple.cpp  FlyingEnemySimple.h  FlyingGolem.cpp  FlyingGolem.h  FlyingShooterEnemy.cpp  FlyingShooterEnemy.h  FlyingSpawnerEnemy.cpp  FlyingSpawnerEnemy.h  Fox.cpp  Fox.h  Frog.cpp  Frog.h  FrogTongue.cpp  FrogTongue.h  (+46 more)
Source/Components/: AABBComponent.cpp  AABBComponent.h  CircleColliderComponent.cpp  CircleColliderComponent.h  ColliderComponent.cpp  ColliderComponent.h  Component.cpp  Component.h  DashComponent.cpp  DashComponent.h  DrawComponent.cpp  DrawComponent.h  OBBComponent.cpp  OBBComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawComponent.cpp  DrawComponent.h  DrawDynamicGroundSpritesComponent.cpp  DrawDynamicGroundSpritesComponent.h  DrawGroundSpritesComponent.cpp  DrawGroundSpritesComponent.h  DrawParticleComponent.cpp  DrawParticleComponent.h  DrawPolygonComponent.cpp  DrawPolygonComponent.h  DrawRopeComponent.cpp  DrawRopeComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h
Source/Components/Drawing/: AnimatorComponent.cpp  AnimatorComponent.h  DrawComponent.cpp  DrawComponent.h  DrawRopeComponent.cpp  DrawRopeComponent.h  (+4 more)
Source/Renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp
Source/UIElements/: UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UIFont.cpp  UIFont.h  UIImage.cpp  UIImage.h  UIScreen.cpp  UIScreen.h  UIText.cpp  UIText.h
(+1 files in other folders)
